--- a/src/components/ListCategories.astro
+++ b/src/components/ListCategories.astro
@@ -1,6 +1,6 @@
 ---
-import { getCategories } from '@/utils'
 import Category from '@/components/Category'
+import { getCategories } from '@/utils'
 const categories = await getCategories()
 
 const { activeCategory } = Astro.props
@@ -9,9 +9,11 @@ const { activeCategory } = Astro.props
 <div class='relative flex flex-wrap min-w-full gap-5'>
 	<Category />
 	{
-		categories.map((category: string) => (
-			<Category name={category} activeCategory={activeCategory} />
-		))
+		categories.map(
+			(category: 'JavaScript' | 'Rust' | 'Other' | 'Category 4' | 'Category 5' | undefined) => (
+				<Category name={category} activeCategory={activeCategory} />
+			)
+		)
 	}
 
 	<div class='hidden sm:block absolute w-full bottom-0 border-b-2 -z-40 dark:border-gray-600'></div>
