--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -88,30 +88,8 @@
 		width: 100%;
 		height: 29px;
 		border-top: 1px solid #f8f7f5;
-		background: -moz-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: -webkit-gradient(
-			linear,
-			left top,
-			left bottom,
-			color-stop(0%, rgba(165, 157, 139, 0.3)),
-			color-stop(100%, rgba(255, 255, 255, 0))
-		);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(165, 157, 139, 0.3) 0%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -o-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: -ms-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(165, 157, 139, 0.3) 0%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -moz-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: -ms-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: -o-linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-		background: linear-gradient(top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+
+		background: linear-gradient(to top, rgba(165, 157, 139, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
 	}
 	/* html{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAADCAYAAABS3WWCAAAAEklEQVQIW2NMS0uTZGQAAjABABDKAU/fJN7FAAAAAElFTkSuQmCC) repeat} */
 	body {
@@ -272,64 +250,9 @@
 		height: 17px;
 		bottom: 0;
 		position: absolute;
-		background: -moz-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -webkit-gradient(
-			linear,
-			left top,
-			left bottom,
-			color-stop(0, rgba(255, 255, 255, 0)),
-			color-stop(4%, rgba(252, 252, 252, 0)),
-			color-stop(100%, rgba(191, 191, 191, 0.3))
-		);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -o-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -ms-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -moz-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -ms-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
-		background: -o-linear-gradient(
-			top,
-			rgba(255, 255, 255, 0) 0,
-			rgba(252, 252, 252, 0) 4%,
-			rgba(191, 191, 191, 0.3) 100%
-		);
+
 		background: linear-gradient(
-			top,
+			to top,
 			rgba(255, 255, 255, 0) 0,
 			rgba(252, 252, 252, 0) 4%,
 			rgba(191, 191, 191, 0.3) 100%
@@ -338,64 +261,9 @@
 	.shadow-down {
 		top: 0;
 		position: absolute;
-		background: -moz-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -webkit-gradient(
-			linear,
-			left top,
-			left bottom,
-			color-stop(0, rgba(191, 191, 191, 0.3)),
-			color-stop(96%, rgba(252, 252, 252, 0)),
-			color-stop(100%, rgba(255, 255, 255, 0))
-		);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -o-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -ms-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -webkit-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -moz-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -ms-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
-		background: -o-linear-gradient(
-			top,
-			rgba(191, 191, 191, 0.3) 0,
-			rgba(252, 252, 252, 0) 96%,
-			rgba(255, 255, 255, 0) 100%
-		);
+
 		background: linear-gradient(
-			top,
+			to top,
 			rgba(191, 191, 191, 0.3) 0,
 			rgba(252, 252, 252, 0) 96%,
 			rgba(255, 255, 255, 0) 100%
@@ -519,80 +387,9 @@
 		display: block;
 		height: 40px;
 		margin: 0 10px;
-		background: -moz-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -webkit-gradient(
-			linear,
-			left top,
-			right top,
-			color-stop(0, rgba(0, 0, 0, 0.1)),
-			color-stop(2%, rgba(0, 0, 0, 0)),
-			color-stop(97%, rgba(0, 0, 0, 0)),
-			color-stop(100%, rgba(0, 0, 0, 0.1))
-		);
-		background:
-			-webkit-linear-gradient(
-				left,
-				rgba(0, 0, 0, 0.1) 0,
-				rgba(0, 0, 0, 0) 2%,
-				rgba(0, 0, 0, 0) 97%,
-				rgba(0, 0, 0, 0.1) 100%
-			),
-			-webkit-linear-gradient(
-					top,
-					rgba(0, 0, 0, 0.1) 0,
-					rgba(0, 0, 0, 0) 34%,
-					rgba(0, 0, 0, 0) 100%
-				);
-		background: -o-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -ms-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -webkit-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -moz-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -ms-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
-		background: -o-linear-gradient(
-			left,
-			rgba(0, 0, 0, 0.1) 0,
-			rgba(0, 0, 0, 0) 2%,
-			rgba(0, 0, 0, 0) 97%,
-			rgba(0, 0, 0, 0.1) 100%
-		);
+
 		background: linear-gradient(
-			left,
+			to left,
 			rgba(0, 0, 0, 0.1) 0,
 			rgba(0, 0, 0, 0) 2%,
 			rgba(0, 0, 0, 0) 97%,
