--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,72 +24,14 @@ const structuredData = {
 }
 ---
 
-<html amp lang='en' class='scroll-smooth'>
+<html lang='en' class='scroll-smooth'>
 	<meta charset='utf-8' />
-	<script async is:inline src='https://cdn.ampproject.org/v0.js'></script>
 	<Head>
 		<head>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
 			<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 			<ProviderTheme />
 			<ProviderAnimations />
-			<style amp-boilerplate>
-				body {
-					-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-					-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-					-ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-					animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-				}
-				@-webkit-keyframes -amp-start {
-					from {
-						visibility: hidden;
-					}
-					to {
-						visibility: visible;
-					}
-				}
-				@-moz-keyframes -amp-start {
-					from {
-						visibility: hidden;
-					}
-					to {
-						visibility: visible;
-					}
-				}
-				@-ms-keyframes -amp-start {
-					from {
-						visibility: hidden;
-					}
-					to {
-						visibility: visible;
-					}
-				}
-				@-o-keyframes -amp-start {
-					from {
-						visibility: hidden;
-					}
-					to {
-						visibility: visible;
-					}
-				}
-				@keyframes -amp-start {
-					from {
-						visibility: hidden;
-					}
-					to {
-						visibility: visible;
-					}
-				}
-			</style><noscript>
-				<style amp-boilerplate>
-					body {
-						-webkit-animation: none;
-						-moz-animation: none;
-						-ms-animation: none;
-						animation: none;
-					}
-				</style></noscript
-			>
 		</head>
 	</Head>
 
@@ -150,15 +92,11 @@ const structuredData = {
 					color: #847e70;
 					opacity: 0.1;
 					zoom: 1;
-					-ms-filter: 'alpha(opacity=10)';
-					*filter: alpha(opacity=10);
 				}
 				.tothetop:hover {
 					color: #847e70;
 					opacity: 0.9;
 					zoom: 1;
-					-ms-filter: 'alpha(opacity=90)';
-					*filter: alpha(opacity=90);
 				}
 
 				[class^='icon-']:before {
