--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,9 +4,11 @@ import ListPosts from '@/components/ListPosts'
 import BaseLayout from '@/layouts/BaseLayout'
 import { Picture } from 'astro:assets'
 import { getCollection } from 'astro:content'
+import gregImg from '../assets/images/greg.jpeg'
 const MAX_POSTS = 1005 // max number of posts to show on the home page
 const allPosts = await getCollection('blog')
 const posts = allPosts.slice(0, MAX_POSTS)
+console.log({ gregImg })
 ---
 
 <BaseLayout title='Blog'>
@@ -17,7 +19,10 @@ const posts = allPosts.slice(0, MAX_POSTS)
 		<Picture
 			formats={['avif', 'webp']}
 			class='u-photo'
-			src={import('../assets/images/greg.jpeg')}
+			width={gregImg.width}
+			height={gregImg.height}
+			inferSize={true}
+			src={gregImg}
 			alt='Gregory Benner'
 			layout='responsive'
 		/>
