--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -33,6 +33,6 @@ console.log({ gregImg })
 	<div class='h-feed'>
 		<h2 class=''>Latest Posts</h2>
 
-		<ListPosts FirstBig={true} posts={posts} />
+		<ListPosts FirstBig={false} posts={posts} />
 	</div>
 </BaseLayout>
