--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,6 @@ const posts = allPosts.slice(0, MAX_POSTS)
 
 	<div class='h-feed'>
 		<h2 class=''>Latest Posts</h2>
-		<ListPosts FirstBig={true} posts={posts} />
+		<ListPosts FirstBig={false} posts={posts} />
 	</div>
 </BaseLayout>
