--- a/src/components/ListRelatedPosts.astro
+++ b/src/components/ListRelatedPosts.astro
@@ -26,7 +26,7 @@ const { posts } = Astro.props
 									class='w-16 h-16 object-cover rounded-full  '
 									alt={`img of ${post.data.title}`}
 									decoding='async'
-									loading='lazy'
+									loading='eager'
 								/>
 							)}
 						</div>
