--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -121,7 +121,7 @@ import simapro from '@/assets/images/portfolio/simapro.jpg'
 						alt='mecer express'
 						style='opacity: 1;'
 						formats={['avif', 'webp']}
-						loading='lazy'
+						loading='eager'
 						width={mercer.width}
 						height={mercer.height}
 					/>
