--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -101,7 +101,7 @@ const atomFeed = '/atom.xml'
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
 
-<!-- <link rel='alternate' type='application/atom+xml' href='/atom.xml' /> -->
+<link rel='alternate' type='application/atom+xml' href='/rss.xml' />
 
 <script
 	is:raw
