--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -44,16 +44,16 @@ const showDate = (webmention: string) =>
 			<span itemprop='commentCount'>{webmentions.length}</span>
 			<section aria-label='Webmentions'>
 				<h2 id='webmentions'>Webmentions</h2>
-				<ul itemscope itemtype='http://schema.org/UserComments'>
+				<ul>
 					{webmentions.map((webmention: WebmentionProps) => (
-						<li style='align-items: center;'>
+						<li style='align-items: center;' itemscope itemtype='http://schema.org/Comment'>
 							<small>
 								<time itemprop='commentTime' datetime={webmention['wm-received']}>
 									{showDate(webmention['wm-received'])}
 								</time>
 							</small>
 							<div
-								itemprop='creator'
+								itemprop='author'
 								itemscope
 								itemtype='https://schema.org/Person'
 								class='avatar-and-author author u-author h-card'
