--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -47,13 +47,15 @@ const showDate = (webmention: string) =>
 				itemtype='https://schema.org/DiscussionForumPosting'
 				itemscope
 			>
+				<time itemprop='datePublushed' datetime='2025-01-24T10:15:16Z' data-astro-cid-qesbhxo5>
+					January 24, 2025
+				</time>
 				<h2 id='webmentions'>Webmentions</h2>
 				<div itemprop='mainEntity' itemtype='https://schema.org/Person' itemscope class='hidden'>
 					<h1 itemprop='name'>Greg</h1>
 
 					<p itemprop='url'>http://blah.com%2Fuploads%2Farticles%2F0f0arenmyx88zjd8tvtz</p>
 				</div>
-				<div itemprop='datePublished' content='2009-05-08' />
 				<ul>
 					{webmentions.map((webmention: WebmentionProps) => (
 						<li style='align-items: center;' itemscope itemtype='http://schema.org/Comment'>
