--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -47,6 +47,7 @@ const showDate = (webmention: string) =>
 				itemtype='https://schema.org/DiscussionForumPosting'
 				itemscope
 			>
+				<meta itemprop='mainEntityOfPage' content={window.location.href} />
 				<time itemprop='datePublushed' datetime='2025-01-24T10:15:16Z' data-astro-cid-qesbhxo5>
 					January 24, 2025
 				</time>
