--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -62,7 +62,7 @@ const showDate = (webmention: string) =>
 					itemtype='https://schema.org/Person'
 					class='avatar-and-author author u-author h-card'
 				>
-					<div itemprop='name'>{webmention.author.name || 'greg'}</div>
+					<div itemprop='name'>greg</div>
 					<a itemprop='url' href='https://jswhisperer.uk/author/greg' aria-label='author url'>
 						{/* {webmention?.author?.photo && (
 										<Picture
