--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -51,6 +51,7 @@ const showDate = (webmention: string) =>
 				itemscope
 			>
 				<meta itemprop='mainEntityOfPage' content={theUrl} />
+				<meta itemprop='url' content={theUrl} />
 				<time itemprop='datePublished' datetime='2025-01-24T10:15:16Z' data-astro-cid-qesbhxo5>
 					January 24, 2025
 				</time>
