--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -65,7 +65,10 @@ const showDate = (webmention: string) =>
 				<time itemprop='datePublished' datetime='2025-01-24T10:15:16Z' data-astro-cid-qesbhxo5>
 					January 24, 2025
 				</time>
-				<h2 id='webmentions'>Webmentions</h2>
+				<h2 id='webmentions' itemprop='headline'>
+					Webmentions
+				</h2>
+
 				<span itemprop='text'>lorem ipsum</span>
 				<div
 					itemprop='author'
